[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ADToolbox"
version = "0.1.0"
description = "A Tool for Modeling and Optimization of Anaerobic Digestion systems"
readme = "README.md"
authors = [{ name = "Parsa Ghadermazi", email = "parsa96@colostatete.edu" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
include_package_data = True
license = { file = "LICENSE" }
keywords = ["Anaerobic Digestion", "AD", "Modeling"]
dependencies = [
"bs4==0.0.1",
"dash==2.4.1",
"numpy==1.22.4",
"pandas==1.4.2",
"plotly==5.8.0",
"pytz==2022.1",
"requests==2.27.1",
"rich==12.4.1",
"scipy==1.8.1",
"sympy==1.10.1"

]
requires-python = ">=3.6"

[project.optional-dependencies]
Sysbio = ["cobra"]



[project.scripts]
ADToolbox = "ADToolbox.__main__:main"