[tool.poetry]
name = "adtoolbox"
version = "0.6.15"
description = "A tool for modeling and optimization of anaerobic digestion process."
authors = ["ParsaGhadermazi <54489047+ParsaGhadermazi@users.noreply.github.com>"]
readme= "README.md"
[tool.poetry.dependencies]
python = ">=3.9,<3.13"
dash = "^2.4.1"
numpy = "^1.22.4"
pandas = "^1.4.2"
plotly = "^5.8.0"
requests = "^2.27.1"
rich = "^12.4.4"
scipy = "^1.8.1"
sympy = "^1.10.1"
matplotlib = "^3.5.2"
dash-escher = "^0.0.4"
dash-bootstrap-components = "^1.3.1"
polars = "^0.20.27"
torch = {version = "^2.4.1", optional = true}
ray = {version = "^2.37.0", optional = true}

[tool.poetry.extras]
optimize = ["torch", "ray"]

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ADToolbox = 'adtoolbox.__main__:main'